--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -3,9 +3,9 @@
     max-width: 90%;
     width: 100%;
     
-    margin: 30px auto 50px;
+    padding: 1rem;
     border-radius: 1rem;
-    padding: 20px;
+    margin-top: 10px;
     
     display: flex;
     justify-content: space-between;
@@ -14,16 +14,15 @@
 }
 
 .score-box {
-    padding: 12px 40px;
+    padding: 6px 20px;
     background: white;
     color: $score-text;
     border-radius: 5px;
-    max-width: 7.8rem;
-    min-width: 5rem;
+    height: fit-content;
 
     &-points {
         color: $dark-text;
-        font-size: 3.5rem;
+        font-size: 2.5rem;
         font-weight: 700;
         padding: 0;
     }
